# flask-sample

./: .editorconfig  .flaskenv  .gitignore  .replit  Dockerfile  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml  setup.py  tox.ini
geoeditor/: app.py  config.py  extensions.py  manage.py  wsgi.py
geoeditor/api/: __init__.py  views.py
geoeditor/api/resources/: __init__.py  user.py
geoeditor/api/schemas/: __init__.py  user.py
geoeditor/auth/: __init__.py  helpers.py  views.py
geoeditor/commons/: apispec.py  pagination.py
geoeditor/commons/templates/: swagger.j2
geoeditor/models/: __init__.py  blacklist.py  project.py  user.py
geoeditor/resources/: project.py
geoeditor/schemas/: project.py
migrations/versions/: 9a810fd28765_.py
tests/: conftest.py  factories.py  test_app.py  test_user.py
